@@ -13,7 +13,7 @@ clear()
 global out
 a=0; g=60; m=1; p=0;
 f1 = Formex([[[10,0,0],[10,0,1]],[[10,0,1],[10,1,1]]]).genit(1,8,1,1,0,1) + Formex([[[10,0,1],[10,1,2]]]).genit(1,7,1,1,0,1)
-f2 = Formex([[[15,0,1],[15,1,1]]]).genit(1,4,0,2,1,0)
+f2 = Formex([[[11,0,1],[11,1,1]]]).genit(1,4,0,2,1,0)
 out = f1+f2
 draw(out)
 
